# pypsa-reserves-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  dashboard.py  dashboard_functions.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yaml
content/: functions.py  functions_figures.py  sidebar.py  tab_about.py  tab_methodology.py  tab_results.py
static/: about.md  limitations.md  methods.md
tests/: test_app.py
